# modern-error-lab

./: .clang-format  .clangd  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README.zh-CN.md  annotated.html  annotated_dup.js  classExceptionDivideByZeroError-members.html  classExceptionDivideByZeroError.html  classtoken_1_1Tokenizer-members.html  classtoken_1_1Tokenizer.html  concepts.html  concepts.js  default.nix  dir_0f6475da1188564ddb2487a30ee66c4b.html  dir_1230703cb126ab0c27f677cd30852416.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ec73cba15c7ef97bfebbcb83cb2b8787.html  error_8hpp.html  error_8hpp.js  error_8hpp_source.html  files.html  flake.nix  flex_8hpp.html  functions_enum.html  functions_eval.html  functions_vars.html  globals_func.html  globals_type.html  hierarchy.js  main_8hpp.html  main_8hpp_source.html  md_README.html  modern-error-lab-config.cmake.in  navtreedata.js  (+22 more)
.github/workflows/: doxygen.yml
docs/: classtoken_1_1Tokenizer.js  dir_d44c64559bbebec7f509842c48db8b23.js  flex_8hpp.js  index.html  structtoken_1_1error_1_1UnexpectedEoiError.html
docs/html/: annotated.html  annotated_dup.js  build_2dest_2include_2error_2error_8hpp_source.html  classes.html  concepts.html  (+126 more)
html/: annotated.html  classExceptionDivideByZeroError-members.html  classExceptionDivideByZeroError.html  classes.html  classtoken_1_1Tokenizer-members.html  conceptflex_1_1Throwable.html  conceptflex_1_1Transformable.html  concepts.html  dir_0f6475da1188564ddb2487a30ee66c4b.html  dir_1230703cb126ab0c27f677cd30852416.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ec73cba15c7ef97bfebbcb83cb2b8787.html  error_8hpp.html  error_8hpp_source.html  files.html  flex_8hpp.html  flex_8hpp_source.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  hierarchy.html  index.html  main_8hpp.html  main_8hpp_source.html  md_README.html  md_README_8zh-CN.html  menudata.js  pages.html  structExpectedDivideByZeroError-members.html  structExpectedDivideByZeroError.html  structflex_1_1Error.html  structflex_1_1Error_3_01ExpectedDivideByZeroError_00_01CharT_01_4-members.html  structflex_1_1Error_3_01ExpectedDivideByZeroError_00_01CharT_01_4.html  structflex_1_1Error_3_01std_1_1variant_3_01Eargs_8_8_8_01_4_00_01CharT_01_4-members.html  (+26 more)
latex/: classExceptionDivideByZeroError.eps  classtoken_1_1Tokenizer.tex  conceptflex_1_1Throwable.tex  error_8hpp.tex  flex_8hpp_source.tex  refman.tex  structflex_1_1Error.tex  structflex_1_1Error_3_01token_1_1error_1_1InvalidCharError_00_01CharT_01_4.tex  structflex_1_1detail_1_1HasType_3_01T_00_01Arg_00_01Args_8_8_8_01_4.tex  token_8hpp_source.tex
search/: all_1.js  all_10.js  all_11.js  all_14.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_d.js  all_f.js  classes_1.js  classes_2.js  concepts_0.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  pages_1.js  pages_2.js  pages_7.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  variables_0.js
test/: CMakeLists.txt  test_flex_perf.cpp  test_flex_perf.hpp
(+96 files in other folders)
